--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "css-loader": "^5.2.0",
+    "gh-pages": "^3.1.0",
+    "node-sass": "^4.14.1"
   }
 }
